REDO-782 fix basket amount overlap

--- a/source/css/scss/app/pages/loan.scss
+++ b/source/css/scss/app/pages/loan.scss
@@ -343,8 +343,8 @@
 		#basket-text {
 			font-size: 0.6rem;
 			position: absolute;
-			top: 15%;
-			right: 48.9%;
+			top: -24%;
+			right: 48.3%;
 		}
 	}
 	.basket-buttons .columns {
